[package]
name = "stm32_microsecond_clock"
version = "0.1.0"
authors = ["Sam Crow <scrow@eng.ucsd.edu>"]
edition = "2018"
repository = "https://github.com/samcrow/stm32_microsecond_clock"
license = "0BSD"
description = "A simple microsecond-precision monotonic clock for STM32 microcontrollers"

[dependencies]
embedded-time = "0.10.1"
cortex-m = "0.7.2"

[dependencies.stm32f4xx-hal]
version = "0.10.0"
optional = true

[features]
"stm32f412" = ["stm32f4xx-hal/stm32f412"]
"stm32f413" = ["stm32f4xx-hal/stm32f413"]

[dev-dependencies]
rtt-target = { version = "0.3.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
cortex-m-rt = "0.6.13"

[[example]]
name = "basic_time"
required-features = ["stm32f412", "stm32f4xx-hal/rt"]

[profile.release]
codegen-units = 1
debug = true
lto = true
